comp ai now broken again because working on adding jumps, need to fix

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
 #canvas{
-    border:3px solid black;
+    border:0px solid black;
     image-rendering: pixelated; 
 }
